--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@supabase/supabase-js": "^2.78.0",
     "@tanstack/react-query": "^5.60.5",
     "@types/katex": "^0.16.8",
+    "@types/multer": "^2.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -56,6 +57,7 @@
     "input-otp": "^1.4.2",
     "katex": "^0.16.28",
     "lucide-react": "^0.453.0",
+    "multer": "^2.0.2",
     "next-themes": "^0.4.6",
     "pg": "^8.16.3",
     "react": "^18.3.1",
